Add checkstyle rules